fix sub-toc layout from expanding too big

--- a/resources/assets/sass/partials/video-iframe.scss
+++ b/resources/assets/sass/partials/video-iframe.scss
@@ -2,6 +2,7 @@
     position: relative;
     margin-bottom: 24px;
     cursor: pointer;
+    width: 100%;
 
     .video-iframe-is-shown & {
         display: none;
